fixed overflow issue & made tag text smaller

--- a/src/scss/abstracts/_base.scss
+++ b/src/scss/abstracts/_base.scss
@@ -25,6 +25,7 @@ html {
 
 body {
   font-family: "Open Sans", sans-serif;
+  overflow-x: hidden;
 }
 
 a {
